--- a/new.mdx
+++ b/new.mdx
@@ -1,6 +1,13 @@
 ---
 title: 'New Post'
 date: '2023-04-19'
+tags: ['next.js',nextjs','new']
 ---
 
 This is a new post
+
+```jsx
+const number = "Five"
+
+console.log("Testing...")
+```
