--- a/new.mdx
+++ b/new.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'New Post'
 date: '2023-04-19'
-tags: ['next.js',nextjs','new']
+tags: ['next.js','nextjs','new']
 ---
 
 This is a new post
