update image alt

--- a/test-post.mdx
+++ b/test-post.mdx
@@ -11,5 +11,5 @@ const number = "Five"
 console.log("Testing post...")
 ```
 
-<CustomImage src="https://raw.githubusercontent.com/lmoranchel/blogposts/dev/images/NextLevel1.PNG" alt="ChatGPT provides the benefits of Static-site Generation" />
+<CustomImage src="https://raw.githubusercontent.com/lmoranchel/blogposts/dev/images/NextLevel1.png" alt="Next Level" />
 
